--- a/IPService.csproj
+++ b/IPService.csproj
@@ -11,11 +11,13 @@
 
   <ItemGroup>
     <PackageReference Include="AspNetCoreRateLimit" Version="5.0.0" />
+    <PackageReference Include="MaxMind.GeoIP2" Version="5.2.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.8.1" />
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="database\" />
     <Folder Include="Properties\PublishProfiles\" />
   </ItemGroup>
 
